--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "projectify",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "Project and todo management in TiddlyWiki",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/thaddeusjiang/projectify.git"
+    "url": "git+ssh://git@github.com/isindir/projectify.git"
   },
   "keywords": [
     "TiddlyWiki",
@@ -34,9 +34,9 @@
   "author": "Nicolas Petton",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/thaddeusjiang/projectify/issues"
+    "url": "https://github.com/isindir/projectify/issues"
   },
-  "homepage": "https://github.com/thaddeusjiang/projectify#readme",
+  "homepage": "https://github.com/isindir/projectify#readme",
   "dependencies": {
     "tiddlywiki": "^5.1.23"
   },
