--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "tiddlywiki": "^5.3.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.33",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.0.3"
   }
 }
